fix: focus visible hide the content of compoent

--- a/packages/ui/src/styles/theme.css
+++ b/packages/ui/src/styles/theme.css
@@ -203,7 +203,6 @@
   &:focus-visible {
     border-color: hsl(var(--primary));
     box-shadow: 0 0 0 1px hsl(var(--primary));
-    z-index: 1;
   }
 
   &:where([data-invalid], [aria-invalid="true"]) {
